--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "commander": "^2.20.0",
     "del": "^4.1.0",
     "express": "^4.16.4",
+    "platform-folders": "^0.4.0",
     "puppeteer": "^1.14.0",
     "request": "^2.88.0"
   }
